docs: uvx qod demo as the primary funnel; document qod start/stop over run-jar
README quick start and the website install page lead with uvx qod demo (jar,
JRE, and duckdb all fetched and cached by the launcher), with Docker and
source-checkout variants secondary. The native-jar path is now documented as
qod start / qod stop everywhere run-jar.sh / stop-jar.sh appeared (quickstart,
install, demo, deploy-local, tls, authentication, resilience, retention
pages, manager jar reference); the scripts remain for the contributor dev
loop. scripts/install.sh is a thin curl|sh bootstrap: install uv if missing,
then uv tool install qod, with PATH repair via uv tool update-shell.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>